# PyVNCServer

./: .gitignore  AGENTS.md  ANALYSIS_INDEX.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS.md  FEATURES_V3.1.md  LICENSE  PYTHON313_FEATURES.md  PYTHON313_IMPROVEMENTS.md  README.md  README_v3.md  WEBSOCKET.md  benchmark_screen_capture.py  config.json  pyproject.toml  pytest.ini  requirements.txt  vnc_server.py  vnc_server_v3.py
.github/workflows/: ci.yml
benchmarks/: benchmark_encoders.py  benchmark_lan_latency.py  benchmark_screen_capture.py  benchmark_screen_capture_methods.py
config/: pyvncserver.toml
examples/: advanced_features_demo.py  python313_features_demo.py
src/pyvncserver/: __init__.py  cli.py  config.py
src/vnc_lib/: __init__.py  auth.py  clipboard.py  (+14 more)
tests/: __init__.py  conftest.py  test_auth_and_utils.py  test_change_detector.py  test_clipboard.py  test_encodings.py  test_input_handler.py  test_metrics.py  test_network_profile.py  test_packaging.py  test_prometheus_exporter.py  test_protocol.py  test_python313_features.py  test_screen_capture.py  test_session_recorder.py  test_vnc_server.py  test_websocket_wrapper.py
vnc_lib/: __init__.py  auth.py  change_detector.py  connection_pool.py  cursor.py  desktop_resize.py  encodings.py  exceptions.py  h264_encoding.py  input_handler.py  jpeg_encoding.py  metrics.py  performance_monitor.py  prometheus_exporter.py  protocol.py  screen_capture.py  server_utils.py  session_recorder.py  structured_logging.py  tight_encoding.py  types.py  websocket_wrapper.py
web/: README_NOVNC.md  vnc_client.html
(+33 files in other folders)
